# normalize_country

./: .gitignore  Cargo.toml  README.md
countries/: en.toml
examples/: countries.csv  demo.rs
src/: error.rs  lib.rs
