[package]
name = "normalize_country"
version = "0.2.0"
edition = "2021"
description = "Convert country names and codes to a standard"
authors = ["Andrey Tkachenko<andrey@aidev.ru>"]
license = "MIT"
repository = "https://github.com/andreytkachenko/normalize_country"
keywords = ["country", "name", "normalization"]

[dependencies]
lazy-static-include = "3"
lazy_static = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
smallstr = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
toml = "0.5"
